--- a/app/src/main/res/layouts/fragment/layout/layoutappbar.xml
+++ b/app/src/main/res/layouts/fragment/layout/layoutappbar.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,18 +6,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-          >
+            android:background="?attr/colorPrimary">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
@@ -27,16 +24,17 @@
                     android:layout_gravity="center"
                     android:layout_weight="4"
                     android:text=""
-                    android:textStyle="bold"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
                 <ImageButton
                     android:id="@+id/btnBookmark"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
+                    android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:gravity="right"
                     android:paddingRight="10dp"
-                    android:layout_weight="1"
                     android:src="@drawable/ic_baseline_bookmark_border_24px" />
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
