--- a/app/src/main/res/layouts/layout/activity_search.xml
+++ b/app/src/main/res/layouts/layout/activity_search.xml
@@ -111,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
 
-                    android:background="@color/black"
+                    android:background="@color/white"
                     android:padding="8dp"
                     app:tbgChildSpacing="8dp"></com.altsoft.togglegroupbutton.MultiSelectToggleGroup>
 
