--- a/app/src/main/res/layouts/fragment/layout/fragment_tab_banner.xml
+++ b/app/src/main/res/layouts/fragment/layout/fragment_tab_banner.xml
@@ -10,6 +10,7 @@ tools:showIn="@layout/activity_main">
 <ListView
     android:id="@+id/listview1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:background="@color/white"/>
 
 </FrameLayout>
